--- a/Frontend_and_UI_Design/Django_Pages_2/css/Heart_Disease.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/Heart_Disease.css
@@ -1,447 +1,370 @@
+@font-face {
+    font-family: volko;
+    src: url(../public/mudkty-wtvolkolakgrotesque-light.ttf);
+}
+*{
+    margin: 0;
+    line-height: normal;
+}
 body{
-    background: #EFEFEF;
-    
+    position: relative;
+    background-color: #EFEFEF;
+    overflow-x: hidden;
+    /* height: 2000px; */
 }
-/* .container{
-    width:100vw;
-    height:100vh;
-} */
+.background1{
+    width: 38vw;
+    height: 38vw;
+    position: absolute;
+    border-radius: 19vw;
+    background: rgba(121, 162, 255, 0.60);
+    filter: blur(200px);
+    right: -8vw;
+    top: -150px;
+}
+.background2{
+    position: absolute;
+    border-radius: 19vw;
+    width: 38vw;
+    height: 38vw;
+    background: rgba(121, 162, 255, 0.60);
+    filter: blur(200px);
+    /* transform: rotate(90deg); */
+    left: -8vw;
+    top: 700px;
+    z-index: -1;
+}
 .logo{
-    width: 4.959vw;
-    height: 7.12vh;
+    text-decoration: none;
 }
-
-.logo_with_name{
-    display:flex;
-    flex-direction:column;
-    
-    /* width: 5.28vw;
-    height: 7.12vh; */
-}
-
-.MEDAI{
+.logoname{
     color: #000;
     text-align: center;
-    font-family: "MADEEvolveSansEVO";
-    font-size:20px;
+    font-size: 1.25rem;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
+    font-family: "MADEEvolveSansEVO";
     line-height: normal;
-    width:63px;
-    height:23px;
-    margin-top:20%;
-    margin-left:7%;
 }
 .header{
+    /* display: static; */
+    position: relative;
     display:flex;
-    margin-left:4.79vw;
-    margin-top:4.94vh;
+    margin-left:6.2vw;
+    margin-right:6.2vw;
+    margin-top:48px;
+    align-items: center;
 }
-
-button{
-    display: inline;
-    /* width: 152px;
-    height: 53px; */
-    width:13vw;
-    height:6vh;
-    margin-top: 2.2vh;
-    flex-shrink: 0;
-    border-radius: 1.9vw;
+.Doctor_Name{
+    display: flex;
+    position: absolute;
+    right: 0px;
+    align-items: center;
+    width:25vw;
+    height: 53px;
+    border-radius: 28.5px;
     background: #FFF;
-    color: #000;
-    font-family: "Montserrat Alternates";
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    cursor: pointer;
-    border:none;
+    gap:6.28vw;
+    margin-left:29vw;
 }
-
-button:hover{
-    background-color: greenyellow;
-}
-
-.Run_Model{
-    /* margin-left:114.59px; */
-    margin-left:7.96vw;
-}
-
-.Get_Report{
-    /* margin-left:41px; */
-    margin-left:2.85vh;
-}
-
 .Doctor_Name>img{
     background-color: #EFEFEF;
     border-radius: 40%;
 }
-
 .doctorNameInput{
     background: #FFF;
     border:none;
     color:black;
     font-family: "Montserrat Alternates";
     font-size: 23px;
-    font-style:normal;
     font-weight: 400;
-    line-height: normal;
-    /* width: 230px; */
-    width:16vw;
-    /* height:29px; */
-    height:3vh;
-    margin-top:1.4vh;
+    width:13vw;
+    height:29px;
     margin-left:1.8vw;
 }
 
-.Doctor_Name{
-    display: flex;
-    /* width: 360px; */
-    width:25vw;
-    /* height: 53px; */
-    height:5.5vh;
-    border-radius: 1.9vw;
-    background: #FFF;
-    gap:2.5vw;
-    /* margin-left: 418px; */
-    margin-left:29vw;
-    margin-top: 2.2vh;
-}
 
+/*   ---------------------Left Part----------------------       */
+
+
+.Container{
+    margin-top: 43px;
+    display: flex;
+}
 .LeftPart{
     display:flex;
+    margin-top: 25px;
+    margin-left: 6.2vw;
     flex-direction:column;
+    margin-right: 5vw;
 }
-
 .Heart_Disease{
-    width:30.5vw;
-    height:19.6vh;
+    width:22.7vw;
+    height:190px;
     color: #000;
-    font-family: "MUDKTY+WTVolkolakGrotesque-Light";
+    font-family: volko;
     font-size: 90px;
-    font-style: normal;
-    font-weight: 200;
-    line-height: 100%; /* 90px */
-    margin-top:5.5vh;
-    margin-left:5.8vw;
+    line-height: 100%; /* line height -> sets distance between lines of text*/
 }
-
 
 .ellipse10{
-    width: 491px;
-    /* width:34%; */
-    height: 491px;
-    /* height:50.57%; */
-    border-radius: 491px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32.8vw;
+    height: 32.8vw;
+    border-radius: 32.8vw;
     background: #D9D9D9;
-    margin-top:67px;
-    /* margin-top:6.9%; */
-    margin-left: 3.4%;
+    margin-top:53px;
 }
-
+.ellipse11{
+    height: 30vw;
+    width: 30vw;
+    border-radius: 30vw;
+    background: #FFF;
+}
 .HDisease_Prediction{
-    display: inline-flex;
-    height: 382px;
-    /* height:37.69%; */
-    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
     margin-top:22px;
-    /* margin-top:2.9%; */
-    margin-left:14px;
+    margin-left:14px; 
+}
+.HDisease_Prediction>img{
+    width: 25vw;
+    height: 25vw;
 }
 
-.ellipse11{
-    display: flex;
-    position: relative;
-    width: 449px;
-    height: 449px;
-    flex-shrink: 0;
-    border-radius: 449px;
-    background: #FFF;
-    /* position: absolute; */
-    top:21px;
-    /* top:4.28%; */
-    left:21px;
-    /* left:4.28%; */
-}
 
+/*   ---------------------Right Part----------------------       */
+
+
+.RightPart{
+    width: 52vw;
+    height: 772px;
+    border-radius: 15px;
+    overflow-y: scroll;
+    background: #d7cbcb4c;
+}
+.RightPart::-webkit-scrollbar{ 
+    width: 10px;
+}
+.RightPart::-webkit-scrollbar-track{ 
+    background-color: #d7cbcb4c;
+}
+.RightPart::-webkit-scrollbar-thumb{ 
+    background-color: #a59a9a4c;
+    border-radius: 7px;
+}
 .Param{
+    margin-top: 20px;
     display:flex;
-    gap:1vw;
-    margin-top:2vh;
-    margin-left:7.4vw;
-
+    gap:9px;
+    align-items: center;
+    margin-left: 20px;
 }
-
-.Blue{
-    width: 21px;
-    height: 21px;
+.BlueDot{
+    width: 1.4vw;
+    height: 1.4vw;
     border-radius: 50%;
-    flex-shrink: 0;
     background-color:#407BFF;
 }
-
 .Parameters{
-    width:12.8vw;
-    height:3.1vh;
-    color: #000;
     font-family: "Montserrat Alternates";
     font-size: 30px;
-    font-style: normal;
     font-weight: 600;
-    line-height: 100%; /* 30px */
 }
-
 .grid-container {
-    padding-top:2vh;
+    margin-top: 32px;
+    margin-left: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    margin-top:2%;
-    gap:2em;
-    margin-left:7.4vw;
-
+    column-gap: 1.33vw;
+    row-gap: 3.4vw;
+    grid-template-columns: 11.3vw 11.3vw 11.3vw 11.3vw;
+    grid-template-rows: 11.3vw 11.3vw;
 }
-
 .grid-item{
-    width: 11.8vw;
-    height: 17.3vh;
-    flex-shrink: 0;
+    position: relative;
+    width: 11.3vw;
+    height: 168px;
     border-radius: 25px;
+    padding-top: 17px;
     background: #D9D9D9;
-    color: #000;
     font-family: "Montserrat Alternates";
-    font-size: 17px;
-    font-style: normal;
+    font-size: 24px;
     font-weight: 500;
-    line-height: normal;
 }
-
-.High_BP{
-    width:100%;
-    height:2.9vh;
-    justify-content: center;
+.grid-item div{
+    width: 100%;
     text-align: center;
-    margin-top:10.12%;
 }
-
-.Stroke{
-    width:100%;
-    height:2.9vh;
-    text-align: center;
-    margin-top:10.12%;
-}
-
-.GenHlth{
-    width:100%;
-    height:2.9vh;
-    text-align: center;
-    margin-top:10.12%;
-}
-
-.H_Attack{
-    width:100%;
-    height:auto;
-    text-align: center;
-    margin-top:2%;
-}
-
-.BMI{
-    width:100%;
-    height:2.9vh;
-    text-align: center;
-    margin-top:9.52%;
-
-}
-
-.High_Chol{
-
-    width:100%;
-    height:2.9vh;
-    margin-top:11%;
-    text-align: center;
-
-}
-
-.Age{
-
-    width:100%;
-    height:2.9vh;
-    text-align: center;
-    margin-top:9%;
-}
-
 .grid-item input{
-    width: 9.2vw;
-    height: 4.3vh;
-    flex-shrink: 0;
+    text-align: center;
+    display: flex;
+    position: absolute;
+    font-size: 30px;
+    font-weight: 600;
+    bottom: 19px;
+    height: 43px;
+    width: 8.8vw;
+    margin-left: 0.93vw;
     border-radius: 15px;
     background: #FFF;
     border:none;
-    margin-top:6.1vh;
-    margin-left:11.8%;
 }
 
-#grid-item4 input{
-    margin-top:5.2vh;
+
+/* -------------- Predict and Reset -------------- */
+
+.predictandreset{
+    width: 36.7vw; /* 550px */
+    height: 70px;
+    display: flex;
+    margin: auto;
+    margin-top: 70px;
+    gap: 1.3vw;
+}
+.button1{
+    width: 18.1vw;
+    height: 70px;
+    border-radius: 24px;
+    border: none;
+    font-family: Montserrat Alternates;
+    font-size: 30px;
+    font-weight: 600;
+    cursor: pointer;
+}
+.predictandreset>.predict{
+    color: #EFEFEF;
+    background: #407BFF;
+}
+.predictandreset>.reset{
+    background: #D9D9D9;
+    color: #407BFF;
 }
 
-.container1{
-    display:flex;
-}
 
-.BlueDot{
-    width: 21px;
-    height: 21px;
-    border-radius: 50%;
-    background-color:#407BFF;
-}
+/* -------------- Prediction ------------- */
+
 
 .Prediction{
-    width:10.88vw;
-    height:3.1vh;
-    color: #000;
-    font-family: "Montserrat Alternates";
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 100%; /* 30px */
-
-}
-
-.Predict{
     position: relative;
-    display:flex;
-    flex-direction: row;
-    margin-top:7.1vh;
-    margin-left:7.4vw;
-    gap:1vw;
-    z-index: 1;
+    margin-top: 80px;
 }
-
-.Param_grid_Prediction{
-    display:flex;
-    flex-direction: column;
-    gap:2vh;
+.Prediction2{
+    display: flex;
 }
-
-.GIF img{
-    position: relative;
-    border-radius: 20px;
-    /* width:18.68vw; */
-    width:269px;
-    height:217px;
-    /* height:22.35vh; */
-    z-index: 2;
-    margin-bottom:53px;
-}
-
-.Box1 input{
-    /* width: 10.2vw; */
-    width:147px;
-    height:116px;
-    /* height: 11.9vh; */
-    flex-shrink: 0;
-    border-radius: 15px;
-    background: #FFF;
-    border:none;
-}
-
 .Box1{
-    /* margin-top:2.16vh; */
+    margin-left: 20px;
     margin-top:21px;
     display:flex;
-    flex-direction: row;
-    /* width: 31.6vw; */
-    width:455px;
+    width:30vw;
     height:170px;
-    /* height: 17.5vh; */
-    flex-shrink: 0;
     border-radius: 35px;
     background: #D9D9D9;
-    justify-content: center;
     align-items: center;
-    gap:3%;
-    /* margin-left:7.4vw; */
-    margin-left:100px;
-
+    margin-right: 1.3vw;
 }
-
-.whitebox{
-    position: absolute;
+.GIF{
+    position: relative;
+    width: 15.2vw;
+    height: 112px;
+    background-color: #FFF;
     border-radius: 21px;
+    margin-left: 1.6vw;
+    margin-right: 1.94vw;
+}
+.GIF img{
+    position: absolute;
+    border-radius: 20px;
+    width:18vw;
+    height:217px;
+    bottom: -15px;
+    left: -15px;
+}
+.Box1 .result{
+    width:147px;
+    height:116px;
+    border-radius: 15px;
     background: #FFF;
-    /* width:15.83vw; */
-    width:226px;
-    height:112px;
-    /* height:11.53vh; */
-    margin-top: 78px;
-    margin-left:24px;
-    z-index:1;
+    border:none;
 }
-
-@media screen and (max-width: 1200px) {
-    button {
-      font-size: 16px;
-    }
-  
-
-  .doctorNameInput{
-    font-size:20px;
-  }
-
-  .MEDAI{
-    margin-top:12px;
-    margin-left:5px;
-    font-size: 20px;
-  }
-
-  .Doctor_Name{
-    gap:2vw;
-  }
-
-  .High_Chol{
-    width:100%;
-    height:17.26%;
-    font-size: 18px;
-    margin-left:10%;
-    margin-top:11%;
-    align-items: center;
-  }
-  .H_Attack{
-    font-size:14px;
-    margin-top:18px;
-}
-
-.Parameters{
-    font-size:20px;
-}
-
-.Prediction{
-    font-size:20px;
-}
-
-.Param_grid_Prediction{
-    display:flex;
+.statisfied_or_not{
+    display: flex;
     flex-direction: column;
-    gap:2vh;
+    align-items: center;
+    justify-content: center;
+}
+.statisfied_or_not>.satisfied{
+    color: #EFEFEF;
+    background: #407BFF;
+}
+.statisfied_or_not>.not_satisfied{
+    background: #D9D9D9;
+    color: #407BFF;
 }
 
+
+/* ---------------------- Get Report ----------------------------- */
+
+
+.GetReport_Prescription_Submit{
+    margin-top: 80px;
 }
-
-@media screen and (max-width:1300){
-
-    .grid-item input{
-        margin-top:0;
-    }
-
-    
-    .Param_grid_Prediction{
-        display:flex;
-        flex-direction: column;
-        gap:2vh;
-        margin-left:100px;
-    }
+.GetReport_Prescription_Submit .Param{
+    margin-bottom: 20px;
+}
+.Box2{
+    width: 49.5vw;
+    height: 254px;
+    background-color: #D9D9D9;
+    border-radius: 35px;
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.GetReport_Prescription_Submit .whitebox{
+    margin-top: 20px;
+    width: 36.7vw;
+    height: 124px;
+    background: #FFF;
+    border-radius: 30px;
+}
+.WhiteDot{
+    width: 1.2vw;
+    height: 1.2vw;
+    border-radius: 50%;
+    background-color:#FFF;
+}
+.GetReport_Prescription_Submit .text{
+    position: absolute;
+    left: 56px;
+    top: 34px;
+    display: flex;
+    align-items: center;
+    gap: 1.33vw;
+    font-weight: 500;
+}
+.GetReport_Prescription_Submit .t{
+    font-family: Montserrat Alternates;
+    font-size: 24px;
+}
+.submit_report{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 30px;
+    width: 24vw;
+    height: 70px;
+    border-radius: 24px;
+    background: #407BFF;
+    color: #EFEFEF;
+    font-family: Montserrat Alternates;
+    font-size: 30px;
+    font-weight: 600;
+    border: none;
 }
