--- a/Frontend_and_UI_Design/Django_Pages_2/css/doc_or_pat.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/doc_or_pat.css
@@ -79,12 +79,17 @@
 }
 
 .vertical-line {
+    /* right: 0px; */
     margin-top:2%;
     margin-left:5.28%;
-    border-left: 1px solid black;
-    height: 63.3%;
+    /* border-left: 1px solid black; */
+    background-color: black;
+    width: 1px;
+    height: 475px;
 }
-
+.you{
+    margin-bottom: 110px;
+}
 .you_are_a{
     display: flex;
     flex-direction: column;
