--- a/Frontend_and_UI_Design/Django_Pages_2/css/Diabetes_Prediction.css
+++ b/Frontend_and_UI_Design/Django_Pages_2/css/Diabetes_Prediction.css
@@ -203,11 +203,25 @@ body{
 .grid-container {
     margin-top: 32px;
     margin-left: 20px;
-    display: grid;
+    /* display: grid;
     column-gap: 1.33vw;
     row-gap: 3.4vw;
     grid-template-columns: 11.3vw 11.3vw 11.3vw 11.3vw;
     grid-template-rows: 11.3vw 11.3vw;
+    justify-content: center;
+    align-items: center; */
+    display: flex;
+    flex-direction: column;
+    gap:3.3vw;
+}
+.row{
+    display: flex;
+    gap:1.47vw;
+}
+.row-center{
+    display: flex;
+    justify-content: center;
+    gap:1.47vw;
 }
 .grid-item{
     position: relative;
@@ -220,6 +234,7 @@ body{
     font-size: 24px;
     font-weight: 500;
 }
+
 .grid-item div{
     width: 100%;
     text-align: center;
