--- a/HMS/static/css/psignup.css
+++ b/HMS/static/css/psignup.css
@@ -45,13 +45,9 @@
     display: flex;
     justify-content: center;
 }
-
-.logo img{
-    width: 4.46338rem;
-    height: 4.32125rem;
-    flex-shrink: 0;
+.logo{
+    text-decoration: none;
 }
-
 .logoname{
     color: #000;
     text-align: center;
@@ -81,7 +77,7 @@
 
 .form{
     display: flex;
-    height: 625px;
+    height: 1145px;
 }
 
 .names {
@@ -105,7 +101,7 @@
 #row{
     display: flex;
     width: 100%;
-    padding: 11% 0 10.5% 0;
+    padding: 18.3% 0 10.5% 0;
 }
 
 #fields{
@@ -163,7 +159,6 @@
     z-index: 0;
 }
 .back2 img{ 
-    
     position: fixed;
     right: 0px;
     bottom: 0px;
