--- a/HMS/templates/psignup.html
+++ b/HMS/templates/psignup.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../static/css/psignup.css">
+    <link rel="stylesheet" href="../static/css/psignup.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="icon" href="../static/public/favicon.ico"> -->
+    <link rel="icon" href="../static/public/favicon.ico">
     <title>Patient signup</title>
 </head>
 <body>
@@ -73,8 +73,14 @@
                     <div class="gender" id="row">
                         <element id="fields"> Gender</element> <element id="apostrophe">*</element>
                     </div>
-                    <div class="Contact Number" id="row">
-                        <element id="fields"> Gender</element> <element id="apostrophe">*</element>
+                    <div class="Contact_Number" id="row">
+                        <element id="fields"> Phone Number</element> <element id="apostrophe">*</element>
+                    </div>
+                    <div class="bloodgroup" id="row">
+                        <element id="fields"> Blood Group</element> <element id="apostrophe">*</element>
+                    </div>
+                    <div class="dob" id="row">
+                        <element id="fields"> Date of birth</element> <element id="apostrophe">*</element>
                     </div>
                 </div>
 
@@ -88,10 +94,16 @@
 
                     <input type="number" id="textbox" required name="height" placeholder="Height in Centimeters">
                     <input type="number" id="textbox" required name="weight" placeholder="Weight in Kilogram">
-                    Male <input type="radio" id="Male" name="gender" value="gender" required> 
-                    Female <input type="radio" id="Female" name="gender" value="gender" required> 
+
+                    <select name="gender" id="textbox">
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                    </select>
+
+                    <!-- Male <input type="radio" id="Male" name="gender" value="gender" required> 
+                    Female <input type="radio" id="Female" name="gender" value="gender" required>  -->
                     <input type="number" id="textbox" required name="number" placeholder="Number">
-                    <select name="bloodgroup" id="bloodgroup">
+                    <select name="bloodgroup" id="textbox">
                         <option value="AP">A+</option>
                         <option value="AN">A-</option>
                         <option value="BP">B+</option>
@@ -102,7 +114,7 @@
                         <option value="ON">O-</option>
                       </select>
 
-                    <input type="date" id="birthdate" name="birthdate">
+                    <input type="date" id="textbox" name="birthdate">
                     
                 </div>
             </div>
