--- a/Frontend_and_UI_Design/Static pages/Heart page/style.css
+++ b/Frontend_and_UI_Design/Static pages/Heart page/style.css
@@ -101,7 +101,8 @@
 .med-ai {
   color: #000000;
   text-align: center;
-  font: 500 20px "MADE Evolve Sans EVO", sans-serif;
+  font: 500 20px "MADEEvolveSansEVO";
+  margin-left: 20px;
   position: absolute;
   left: 195px;
   top: 134px;
