--- a/HMS/templates/result_diab.html
+++ b/HMS/templates/result_diab.html
@@ -8,6 +8,7 @@
     <title>Status</title>
 </head>
 <body>
-    <h2>There is a {{data}}% chance that your patient has diabetes!!!</h2>
+    <h2>There is a {{data}}% chance that your patient has diabetes!!!</h2><br>
+    <h3> <a href="{% url 'venue_pdf' %}">GetReport</a>
 </body>
 </html>
