--- a/HMS/templates/form_diab.html
+++ b/HMS/templates/form_diab.html
@@ -9,6 +9,9 @@
 
 
     <form action="result">
+
+        PatientID = <input type="number" name="pid" required>
+
         HighBP = Yes <input type="radio" id = "Yes" name="HighBP" value = "HighBP" required>
         No <input type="radio" id = "No" name="HighBP" value = "NormalBP" required><br>
         <!-- HighChol = <input type="number" name="HighChol" required> -->
