New Changes in Javascript

--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -37,6 +37,6 @@
         <h4 class="small">Already a member? <a href="./login.html" class="small">Login</a></h4>
 
     </form>
-    <script src="./js/dsignup.js"></script>
+    <script src="../static/js/dsignup.js"></script>
 </body>
 </html>
