--- a/HMS/templates/psignup.html
+++ b/HMS/templates/psignup.html
@@ -138,7 +138,7 @@
     <div class="back2">
         <img src="../static/public/Ellipse_13.svg">
     </div>
-    <script src="./js/psignup.js"></script>
+    <script src="../static/js/psignup.js"></script>
 </body>
 </html>
 
