--- a/HMS/templates/login.html
+++ b/HMS/templates/login.html
@@ -13,14 +13,14 @@
 <body>
     <div class="homepage">
             <div class="rectangle-5">
-                <div class="company-icon">
+                <a href="./homepage.html" class="company-icon">
                     <img class="image" alt="" src="../static/public/logo.svg">
                     <div class="logoname">MED.AI</div>
-                </div>
+                </a>
                 <div class="nav">
-                    <a href="#" class="contact">Contact us</a>
-                    <a href="#" class="about">About us</a>
-                    <a href="signup" class="logsign">Sign up</a>
+                    <a href="./homepage.html#contact" class="contact">Contact us</a>
+                    <a href="./homepage.html#line1" class="about">About us</a>
+                    <a href="./signup" class="logsign">Sign up</a>
                 </div>
             </div>
                 <div class="login">
