--- a/HMS/templates/psignup.html
+++ b/HMS/templates/psignup.html
@@ -13,12 +13,12 @@
 <body>
     
     <div class="navbar">
-        <div class="logo">
+        <a href="./homepage.html" class="logo">
             <img src="../static/public/logo.svg" alt="">
             <div class="logoname">
                 MED.AI
             </div>
-        </div>
+        </a>
         <div class="nav">
             <a href="./homepage.html" class="logsign">Home</a>
             <a href="./homepage.html#contact" class="contact">Contact us</a>
