--- a/HMS/static/css/signup.css
+++ b/HMS/static/css/signup.css
@@ -33,6 +33,8 @@
     line-height: normal;
 }
 .rectangle-5 .company-icon {
+    text-decoration: none;
+    color: black;
     margin-right: auto; 
 }
 .rectangle-5 .nav {
@@ -49,6 +51,8 @@
     padding: 10px 15px; 
 }
 .ellipse14 {
+    position: relative;
+    z-index: -1;
     display: flex;
     width: 1496px;
     height:809px;
