--- a/HMS/templates/homepage.html
+++ b/HMS/templates/homepage.html
@@ -23,8 +23,8 @@
             <div class="nav">
                 <a href="#contact" class="contact">Contact us</a>
                 <a href="#line1" class="about">About us</a>
-                <a href="login" class="logsign">Login</a>
-                <a href="signup" class="logsign">Sign up</a>
+                <a href="./login" class="logsign">Login</a>
+                <a href="./signup" class="logsign">Sign up</a>
             </div>
         </div>
         <div class="diagnostic">Diagnostic Expert System</div>
