--- a/HMS/templates/signup.html
+++ b/HMS/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/doc_or_pat.css" />
+    <link rel="stylesheet" href="../static/css/signup.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat Alternates:wght@400;500;600&display=swap" />
     <link href="https://db.onlinewebfonts.com/c/1938c6d3ea712f9bdcf348aa789f5d68?family=MADEEvolveSansEVO" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">    
@@ -13,14 +13,14 @@
 <body>
     <div class="homepage">
         <div class="rectangle-5">
-            <div class="company-icon">
+            <a href="./homepage.html" class="company-icon">
                 <img class="image" alt="" src="../static/public/logo.svg">
                 <div class="logoname">MED.AI</div>
-            </div>
+            </a>
             <div class="nav">
-                <a href="#" class="contact">Contact us</a>
-                <a href="#" class="about">About us</a>
-                <a href="login" class="logsign">Login</a>
+                <a href="./homepage.html#contact" class="contact">Contact us</a>
+                <a href="./homepage.html#line1" class="about">About us</a>
+                <a href="./login" class="logsign">Login</a>
             </div>
         </div>
     </div>
@@ -35,9 +35,8 @@
         <div class="you_are_a">
             you are a
             <div class="UserType">
-                <a href="dsignup"><button class="button doctor">Doctor</button></a>
-                <a href="psignup"> <button class="button patient">Patient</button></a>
-                                      
+                <a href="./dsignup"><button class="button doctor">Doctor</button></a>
+                <a href="./psignup"> <button class="button patient">Patient</button></a>                     
             </div>
          </div>
     </div>
