changes in form_diab

--- a/HMS/templates/form_diab.html
+++ b/HMS/templates/form_diab.html
@@ -86,14 +86,14 @@
                         <div>High BP</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="Yes" value="HighBP"
+                                <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="HighBP"
                                     required>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                                <label class="form-check-label" for="Yes1">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="No" value="NormalBP"
+                                <input class="form-check-input" type="radio" name="HighBP" id="No1" value="NormalBP"
                                     required>
-                                <label class="form-check-label" for="No">No</label>
+                                <label class="form-check-label" for="No1">No</label>
                             </div>
                         </div>
 
@@ -103,14 +103,14 @@
                         <div>High Cholestrol</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="Yes" value="HighChol"
+                                <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="HighChol"
                                     required>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                                <label class="form-check-label" for="Yes2">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="No" value="NormalChol"
+                                <input class="form-check-input" type="radio" name="HighChol" id="No2" value="NormalChol"
                                     required>
-                                <label class="form-check-label" for="No">No</label>
+                                <label class="form-check-label" for="No2">No</label>
                             </div>
                         </div>
                     </div>
@@ -121,14 +121,14 @@
                         <div>Stroke</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="Yes" value="YesStroke"
+                                <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="YesStroke"
                                     required>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                                <label class="form-check-label" for="Yes3">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="No" value="NoStroke"
+                                <input class="form-check-input" type="radio" name="Stroke" id="No3" value="NoStroke"
                                     required>
-                                <label class="form-check-label" for="No">No</label>
+                                <label class="form-check-label" for="No3">No</label>
                             </div>
                         </div>
                     </div>
@@ -137,20 +137,20 @@
                         <div>HeartDisease or Attack</div>
                         <div class="radio-buttons">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes"
+                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes4"
                                     value="YesHeartDiseaseorAttack" required>
-                                <label class="form-check-label" for="Yes">Yes</label>
+                                <label class="form-check-label" for="Yes4">Yes</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No"
+                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No4"
                                     value="NoHeartDiseaseorAttack" required>
-                                <label class="form-check-label" for="No">No</label>
+                                <label class="form-check-label" for="No4">No</label>
                             </div>
                         </div>
                     </div>
                     <div class="grid-item" id="grid-item6">
                         <div>GenHlth</div>
-                        <select name="GenHlth" id="" class="dropdown">
+                        <select name="GenHlth" id="" class="dropdown" >
                             <option value="1">Best</option>
                             <option value="2">Mediocre</option>
                             <option value="3">Average</option>
