--- a/HMS/static/css/form_diab.css
+++ b/HMS/static/css/form_diab.css
@@ -399,6 +399,7 @@ body{
     justify-content: center;
     margin: auto;
     margin-top: 30px;
+    margin-bottom: 30px;
     width: 24vw;
     height: 70px;
     border-radius: 24px;
