--- a/HMS/templates/psignup.html
+++ b/HMS/templates/psignup.html
@@ -138,7 +138,7 @@
 
     </div>
     <div class="back2">
-        <img src="../static/public/Ellipse_13.svg">
+        <!-- <img src="../static/public/Ellipse_13.svg"> -->
     </div>
     
 </body>
