--- a/HMS/templates/form_diab_result.html
+++ b/HMS/templates/form_diab_result.html
@@ -165,12 +165,22 @@
                             </Div>
                             <input type="text" name="" id="" readonly>
                         </div>
-                        <div class="statisfied_or_not">
-                            <br>
-                            <button class="satisfied button1">Satisfied</button>
-                            <br>
-                            <button class="not_satisfied button1">Not Satisfied</button>
+
+
+
+                        <div class="radio-buttons statisfied_or_not">
+                            <div class="form-check satis">
+                                <input class="form-check-input " type="radio" name="Satisfaction" id="Satisfied"
+                                    value="YES" readonly>
+                                <label class="form-check-label " for="Satisfied">Satisfied</label>
+                            </div>
+                            <div class="form-check satis">
+                                <input class="form-check-input" type="radio" name="Satisfaction" id="NotSatisfied"
+                                    value="NO" readonly>
+                                <label class="form-check-label " for="NotSatisfied">Not Satisfied</label>
+                            </div>
                         </div>
+
                     </div>
                 </div>
 
@@ -187,7 +197,9 @@
                             <div class="WhiteDot"></div>
                             <div class="t">Doctor's Verdict</div>
                         </div>
-                        <div class="whitebox"></div>
+                        <div>
+                            <textarea class="whitebox" name="" id=""></textarea>
+                        </div>
                     </div>
                     <br><br>
                     <div class="Box2">
@@ -195,10 +207,13 @@
                             <div class="WhiteDot"></div>
                             <div class="t">Prescription</div>
                         </div>
-                        <div class="whitebox"></div>
+                        <div > 
+                            <textarea class="whitebox" name="" id=""></textarea>
+                            <!-- <input type="text" class="whitebox"> -->
+                        </div>
                     </div>
 
-                    <button class="submit_report">Submit Report</button>
+                    <button class="submit_report">View Report</button>
 
 
                 </div>
