--- a/HMS/templates/dsignup.html
+++ b/HMS/templates/dsignup.html
@@ -20,9 +20,9 @@
             </div>
         </a>
         <div class="nav">
-            <a href="./homepage.html" class="logsign">Home</a>
-            <a href="./homepage.html#contact" class="contact">Contact us</a>
-            <a href="./homepage.html#line1" class="about">About us</a>
+            <a href="./homepage" class="logsign">Home</a>
+            <a href="./homepage#contact" class="contact">Contact us</a>
+            <a href="./homepage#line1" class="about">About us</a>
             <a href="./login.html" class="logsign">Login</a>
         </div>
     </div>
