--- a/HMS/templates/form_diab_result.html
+++ b/HMS/templates/form_diab_result.html
@@ -26,7 +26,7 @@
             <!-- <img src="./public/Ellipse_13.svg"> -->
         </div>
         <div class="header">
-            <a href="./homepage.html" class="logo">
+            <a href="./homepage" class="logo">
                 <img src="../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
