--- a/HMS/templates/login.html
+++ b/HMS/templates/login.html
@@ -13,13 +13,13 @@
 <body>
     <div class="homepage">
             <div class="rectangle-5">
-                <a href="./homepage.html" class="company-icon">
+                <a href="./homepage" class="company-icon">
                     <img class="image" alt="" src="../static/public/logo.svg">
                     <div class="logoname">MED.AI</div>
                 </a>
                 <div class="nav">
-                    <a href="./homepage.html#contact" class="contact">Contact us</a>
-                    <a href="./homepage.html#line1" class="about">About us</a>
+                    <a href="./homepage#contact" class="contact">Contact us</a>
+                    <a href="./homepage#line1" class="about">About us</a>
                     <a href="./signup" class="logsign">Sign up</a>
                 </div>
             </div>
